// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`focused table text input 1`] = `
<DocumentFragment>
  <input
    aria-invalid="false"
    aria-label="focused text input"
    class="pf-c-form-control"
    data-ouia-component-id="OUIA-Generated-TextInputBase-2"
    data-ouia-component-type="PF4/TextInput"
    data-ouia-safe="true"
    type="text"
    value="test"
  />
</DocumentFragment>
`;

exports[`simple table text input 1`] = `
<DocumentFragment>
  <input
    aria-invalid="false"
    aria-label="simple text input"
    class="pf-c-form-control"
    data-ouia-component-id="OUIA-Generated-TextInputBase-1"
    data-ouia-component-type="PF4/TextInput"
    data-ouia-safe="true"
    type="text"
    value=""
  />
</DocumentFragment>
`;
